# stokz

./: .env.example  .gitignore  DESIGN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: daily-site-publish.yml
apps/web/: package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/app/: globals.css  (+2 more)
docs/superpowers/plans/: 2026-04-07-stokz-watchlist-analysis-plan.md  2026-04-12-stokz-calibration-overlay.md
docs/superpowers/specs/: 2026-04-07-stokz-watchlist-analysis-design.md
scripts/: run-daily-refresh.ps1
services/forecast/: README.md  pyproject.toml
services/forecast/src/stokz_forecast/: __init__.py  analyst.py  baselines.py  calibration_features.py  calibration_history.py  calibration_model.py  cli.py  config.py  data_models.py  data_sources.py  evaluation.py  notifications.py  pipeline.py  portfolio.py  research.py  review_loop.py  reviews.py  risk.py  signals.py  stock_details.py  strategy_tuner.py  summary_writer.py  timesfm_adapter.py  transforms.py  universe.py
services/forecast/src/stokz_forecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/forecast/stokz_forecast/: __init__.py
services/forecast/tests/: test_analyst.py  test_baselines.py  test_calibration_features.py  test_calibration_history.py  test_calibration_model.py  test_cli.py  test_data_sources.py  test_notifications.py  test_pipeline_shapes.py  test_portfolio_actions.py  test_research.py  test_signals.py  test_transforms.py
supabase/migrations/: 20260405_000001_init_stokz.sql  20260406_000002_notification_tables.sql
(+23 files in other folders)
